# flutter_rust_todo_app

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/github/henriSedjame/todo_app/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
config/: app.yml  app_android.yml  app_ios.yml
ios/Runner/: .h  AppDelegate.swift  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  todo_page.dart  todo_view.dart
lib/api/: todo_services.dart  todo_services_impl.dart
rust/: Cargo.toml  Makefile
rust/src/: api.rs  bridge_generated.rs  config.rs  data.rs  lib.rs  logging.rs  repos.rs  types.rs
web/: index.html  manifest.json
