[package]
name = "todo-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "todo"
crate-type = ["staticlib", "cdylib"]

[dependencies]

## Flutter rust bridge
flutter_rust_bridge = "1.30.0"
anyhow = "1.0.52"

## Handling global references
lazy_static = "1.4.0"
async_once = "0.2.6"
once_cell = "1.12.0-pre.1"

## UUID generator
uuid = { version="0.8.2" , features = ["default","v4"]}

## Handling Serialization
serde = {version = "1.0.126", features= ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.21"

## Data persistence
mobc-postgres = {version = "0.7.0", features = ["with-chrono-0_4","with-serde_json-1","with-bit-vec-0_6"]}
mobc = "0.7.3"
postgres-types = { version = "0.2.2", features = ["derive"] }

## Asynchoronous
tokio = {version = "1.8.0", features = ["macros", "fs", "rt"]}

## Handling error
thiserror = "1.0.30"

## Handling Date
chrono = { version = "0.4", features = ["unstable-locales"]}
